--- a/.env
+++ b/.env
@@ -12,6 +12,6 @@ CLOUD_NAME = dezenww03
 API_KEY = 642777133155336
 API_SECRET = rjJ4j39k-pJgpVMo9UEe7q_8lAo
 
-MONOGODB_URL = "mongodb+srv://rohitshaw3622:4kRTv7jeVwhTaIUq@cluster0.7m7aajq.mongodb.net/studyNotionDB"
+MONOGODB_URL = "mongodb+srv://rohitshaw3622:4kRTv7jeVwhTaIUq@cluster0.7m7aajq.mongodb.net/codemindsDB"
 
-PORT = 4000
+PORT = 3000
