--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-    "version":2,
-    "builds":[
+    "version": 2,
+    "routes": [
         {
-            "src":"./index.js",
-            "use":"@vercel/node"
-        }
-    ],
-    "routes":[
-        {
-            "src":"./(.*)",
-            "dest":"/"
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
