--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,26 @@
 {
     "version": 2,
-    
-        "builds": [
-          {
-            "src": "./index.js",
-            "use": "@vercel/node"
-          }
-        ],
-        "routes": [
-          {
-            "src": "/.*",
-            "dest": "index.js"
-          }
-        ]
-      
-}
+    "routes": [
+      {
+        "src": "/api/v1/auth(.*)",
+        "dest": "routes/User.js"
+      },
+      {
+        "src": "/api/v1/profile(.*)",
+        "dest": "routes/Profile.js"
+      },
+      {
+        "src": "/api/v1/payment(.*)",
+        "dest": "routes/Payment.js"
+      },
+      {
+        "src": "/api/v1/course(.*)",
+        "dest": "routes/Course.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
+  }
+  
