--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build":"npm i"
+    "build":"npm build --output public"
   },
   "keywords": [],
   "author": "",
