--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build":"`npm run build`"
+    "build":"npm i"
   },
   "keywords": [],
   "author": "",
