--- a/package.json
+++ b/package.json
@@ -3,35 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
-    "engines": {
-      "node": "18.x"
-    },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build":"npm i"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.3",
+    "cloudinary": "^1.36.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto-random-string": "^5.0.0",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1",
-    "node-schedule": "^2.1.1",
-    "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.3",
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2",
-    "router": "^1.3.8"
+    "razorpay": "^2.8.6"
+  },
+  "engines": {
+    "node": ">=16.9"
   }
 }
